instance1/temp-retrieve/objects/Article_Feedback__c/Article_Feedback__c.object-meta.xml
<CustomObject>
    <label>Article Feedback</label>
    <nameField>
        <displayFormat>Feedback-{00000}</displayFormat>
        <label>Article Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>