instance1/temp-retrieve/objects/Article_Feedback__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Article Feedbacks</relationshipLabel>
    <relationshipName>Article_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>