instance1/temp-retrieve/objects/Article_Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>