instance1/temp-retrieve/objects/Article_Feedback__c/fields/SME__c.field-meta.xml
<CustomField>
    <fullName>SME__c</fullName>
    <formula>Article__r.SME__r.FirstName &amp;&quot; &quot;&amp; Article__r.SME__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SME</label>
    <type>Text</type>
</CustomField>