instance1/temp-retrieve/objects/Article_Feedback__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Article_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>