instance1/temp-retrieve/objects/Article_Feedback__c/listViews/Rejected_Feedback.listView-meta.xml
<ListView>
    <fullName>Rejected_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Article__c</columns>
    <columns>Submitter__c</columns>
    <columns>Feedback__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>SME__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Feedback</label>
</ListView>